Decided to keep the gallery and carosal api. Fixed the modal menu by changing the z-index on the navbar. Work on an upload button and upload pop-up screen.

--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -24,6 +24,7 @@
 nav, .navbar-fixed {
     height: 50px;
     line-height: 50px;
+    z-index: 1;
 }
 
 .popup {
